--- a/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
+++ b/src/app/modules/land-creation/land-charge-creation/land-charge-creation.component.html
@@ -60,7 +60,7 @@
                                     </ngx-mat-select-search>
 
                                 </mat-option>
-                                <mat-option *ngFor="let obj of ProvinceLov.LOVs" [value]="obj.Id">
+                                <mat-option *ngFor="let obj of ProvinceLov?.LOVs" [value]="obj.Id">
                                     {{obj.Name}}
                                 </mat-option>
                             </mat-select>
