--- a/src/app/modules/customer/submit-customers/submit-customers.component.html
+++ b/src/app/modules/customer/submit-customers/submit-customers.component.html
@@ -135,7 +135,7 @@
                             <mat-icon style="margin-left: 2px;" title="View Customer">visibility</mat-icon>
                         </button>
                         <button mat-icon-button color="primary"
-                                *ngIf="!customer.Latitude.startsWith('0.0') && !customer.Longitude.startsWith('0.0')"
+                                *ngIf="!customer.Latitude?.startsWith('0.0') && !customer.Longitude?.startsWith('0.0')"
                                 (click)="viewMap(customer)">
                             <mat-icon style="margin-left: 2px;" title="View Map">location_on</mat-icon>
                         </button>
