--- a/src/app/modules/loan-utilization/view-file/view-file.component.html
+++ b/src/app/modules/loan-utilization/view-file/view-file.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="url" style="height: 85vh;">
     <div class="row">
         <div class="col-lg-12 sticky-top text-right relative">
-            <div class="heading w-full">
+            <div class="w-full">
                 <button mat-icon-button class="close-button float-right bg-white"
                         [mat-dialog-close]="true">
                     <!-- X -->
@@ -12,37 +12,15 @@
     </div>
 
 
-    <div class="row">
-        <div class="col-lg-12">
-            <img class="images zoom-images mx-auto" style="width: 500px; height:480px; " [src]="url" id="image"
-                 [ngStyle]="{
-                 transform: 'scale(' + scale / 100 + ')',
-                 'transform-origin': left + 'px ' + top + 'px'
-                 }"
-            />
+    <angular-image-viewer [src]="url" [config]="config"
+                          style="width: 500px;height: 500px;"></angular-image-viewer>
 
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-12 flex text-center border-t " style="height: 60px;     place-items: self-end;" >
-            <button class="mr-8" mat-icon-button (click)="rotate()" color="primary">
-                <mat-icon>rotate_right</mat-icon>
-                Rotate
-            </button>
-    
-            <div class="toolbar ml-2 " style="margin-bottom: 10px;     z-index: 0;">
-                <label class="mr-3">Zoom:</label>
-                <input type="range" min="100" max="1000" [(ngModel)]="scale">
-                <!--        <p>Zoom X: {{ left }}</p>-->
-                <!--        <p>Zoom Y: {{ top }}</p>-->
-            </div>
-        </div>
-    </div>
-
-
+    <!--            <img class="images zoom-images mx-auto" style="width: 500px; height:480px; " [src]="url" id="image"-->
+    <!--                 [ngStyle]="{-->
+    <!--                 transform: 'scale(' + scale / 100 + ')',-->
+    <!--                 'transform-origin': left + 'px ' + top + 'px'-->
+    <!--                 }"-->
+    <!--            />-->
 
 
 </div>
-<style>
-</style>
