--- a/src/app/modules/customer/consent-form/consent-form.component.html
+++ b/src/app/modules/customer/consent-form/consent-form.component.html
@@ -19,7 +19,7 @@
             <div class="kt-form__actions kt-form__actions--sm  mt-4"
                  style="display: flex;flex-direction: column;align-items:flex-start;gap: 10px">
                 <!--<button mat-button (click)="onNoClick()">Cancel</button>&nbsp;-->
-                <mat-checkbox [checked]="agreed" (change)="agreed=!agreed">I have read and agree with the above terms
+                <mat-checkbox [checked]="agreed" (change)="agreed=!agreed">I have read and agreed with the above terms
                     and conditions
                 </mat-checkbox>
                 <button mat-button (click)="onYesClick()" class="btn btn-success bg-green" color="primary"
