--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -139,14 +139,34 @@
                         <mat-cell *matCellDef="let eligibilityRequest">{{eligibilityRequest.StatusName}}
                         </mat-cell>
                     </ng-container>
-                    <ng-container matColumnDef="Actions">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header>Actions</mat-header-cell>
-                        <mat-cell *matCellDef="let eligibilityRequest" style="flex-wrap: wrap">
+                    <ng-container matColumnDef="ViewNDC">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>View NDC</mat-header-cell>
+                        <mat-cell *matCellDef="let eligibilityRequest">
                             <a [href]="eligibilityRequest.NdcFilePath" target="_blank" mat-icon-button color="accent"
                                matTooltip="View NDC"
                                aria-label="View Files">
-                                <mat-icon>description</mat-icon>
+                            <mat-icon>description</mat-icon>
                             </a>
+                        </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="ECIBPDFLink">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>ECIB PDF</mat-header-cell>
+                        <mat-cell *matCellDef="let eligibilityRequest">
+                            <a [href]="eligibilityRequest.ECIBPDFLink" target="_blank" mat-icon-button color="accent"
+                            matTooltip="ECIB PDF Link"
+                            aria-label="View Files">
+                         <mat-icon>description</mat-icon>
+                         </a>
+                        </mat-cell>
+                    </ng-container>
+                    <ng-container matColumnDef="Actions">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header>Actions</mat-header-cell>
+                        <mat-cell *matCellDef="let eligibilityRequest" style="flex-wrap: wrap">
+                            <!-- <a [href]="eligibilityRequest.NdcFilePath" target="_blank" mat-icon-button color="accent"
+                               matTooltip="View NDC"
+                               aria-label="View Files">
+                            <mat-icon>description</mat-icon>
+                            </a> -->
                             <button mat-icon-button color="accent" matTooltip="View Reciepts"
                                     (click)="getImagesData(eligibilityRequest.Id)">
                                 <mat-icon>visibility</mat-icon>
