--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -60,9 +60,13 @@
                     </div>
 
                 </div>
+
+
+            </div>
+            <div class="row">
                 <div class="col-lg-6 mt-3">
                     <div class="shadow-sm border">
-                        <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
+                        <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3" style="height: 320px;">
                             <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
                                        [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
                                        [theme]="chartnoOfBorrowers?.theme"
@@ -70,6 +74,15 @@
                         </div>
                     </div>
 
+                </div>
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
+                            <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                            <app-pyramid-chart [item]="CreditCeiling">
+
+                            </app-pyramid-chart>
+
+                    </div>
                 </div>
             </div>
             <div class="row mb-2">
