--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -26,17 +26,9 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-5" >
-
-                            <!-- <apx-chart
-                                [series]="chartOptions?.series"
-                                [chart]="chartOptions?.chart"
-                                [labels]="chartOptions?.labels"
-                                [title]="chartOptions?.title"
-                                [theme]="chartOptions?.theme"
-                                [responsive]="chartOptions?.responsive"
-                            ></apx-chart> -->
-                            <app-pyramid-chart>
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
+                            <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                            <app-pyramid-chart [item]="CreditCeiling">
 
                             </app-pyramid-chart>
 
