--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -43,7 +43,15 @@
                     </div>
 
                 </div>
-            </div>
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
+                            <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                            <app-pyramid-chart [item]="CreditCeiling">
+
+                            </app-pyramid-chart>
+
+                    </div>
+                </div>            </div>
             <div class="row">
                 <div class="col-lg-6 table-responsive">
                     <table class="table table-striped">
