--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -60,6 +60,9 @@
                     </div>
 
                 </div>
+
+            </div>
+            <div class="row">
                 <div class="col-lg-6 mt-3">
                     <div class="shadow-sm border">
                         <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
@@ -69,7 +72,14 @@
                                        [responsive]="chartnoOfBorrowers?.responsive"></apx-chart>
                         </div>
                     </div>
+                </div>
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
+                            <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                            <app-pyramid-chart [item]="CreditCeiling">
+                            </app-pyramid-chart>
 
+                    </div>
                 </div>
             </div>
             <div class="row mb-2">
