--- a/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
+++ b/src/app/modules/dashboard/branch-manager-dashboard/branch-manager-dashboard.component.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-lg-6 mt-3">
                     <div class="shadow-sm border">
-                        <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3" style="height: 320px;">
+                        <div id="chart" *ngIf="chartnoOfBorrowers" class=" mt-0 py-3">
                             <apx-chart [series]="chartnoOfBorrowers?.series" [chart]="chartnoOfBorrowers?.chart"
                                        [labels]="chartnoOfBorrowers?.labels" [title]="chartnoOfBorrowers?.title"
                                        [theme]="chartnoOfBorrowers?.theme"
