--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -54,7 +54,7 @@
                         <mat-icon class="mr-2">add</mat-icon>
                         Attach
                     </button>
-                    <a class=" mx-3 self-center cursor-pointer text-green" (click)="viewCustomer()">Search Cutomer </a>
+                    <a class=" mx-3 self-center cursor-pointer text-green" (click)="viewCustomer()">Search Customer </a>
                 </div>
 
 
