--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -33,7 +33,7 @@
 
         <div class="col-lg-4 col-sm-12">
 
-            <mat-card (click)="bufrictionOfOSBalances()"
+            <mat-card routerLink="bifurcation-of-os-balances-lc"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -105,7 +105,7 @@
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="voucherPostingDay()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="voucher-posting-day-book" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
 
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
@@ -117,7 +117,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="dailyVoucherProof()"
+            <mat-card routerLink="daily-voucher-proof-listing"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -130,7 +130,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="affidavitForLegalHeirs()"
+            <mat-card routerLink="affidavit-for-legal-heirs"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -147,7 +147,7 @@
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="paymentBehavior()"
+            <mat-card routerLink="payment-behavior"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -160,7 +160,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="disbursement()"
+            <mat-card routerLink="disbursement-performance-report"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -173,7 +173,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="disbursementPurposeWise()"
+            <mat-card routerLink="disbursement-performance-report-purpose-wise"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText"
             >
@@ -190,7 +190,7 @@
 
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="loanAccountBalance()"
+            <mat-card routerLink="loan-account-balance"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -203,7 +203,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="insuranceReport()"
+            <mat-card routerLink="insurance-report"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
@@ -216,7 +216,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="laFileProgress()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="la-file-progress-summary" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -230,7 +230,7 @@
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="loanInfoDetails()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="loan-information-details" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -255,7 +255,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="hoZonalExpense()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="ho-zonal-expense-report" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -270,7 +270,7 @@
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="markOnCA()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="mark-on-ca-report" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -281,7 +281,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="recoverySchedule()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="recovery-schedule" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -292,7 +292,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="loanMove()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="loan-move" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -307,7 +307,7 @@
     <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="statementOfAffairs()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="statement-of-affairs-report" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
@@ -318,7 +318,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click)="reschedulementOfLoan()" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
+            <mat-card routerLink="reschedulement-of-loan" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">
 
