--- a/src/app/modules/reports/customer-cwr/customer-cwr.component.html
+++ b/src/app/modules/reports/customer-cwr/customer-cwr.component.html
@@ -47,7 +47,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">LA File/Booklet #</mat-label>
-                                <input matInput placeholder="Enter LA File/ Booklet Number" formControlName="LAFile"
+                                <input matInput placeholder="Enter LA File/ Booklet Number" formControlName="BookletNo"
                                        appNumberOnly  autocomplete="off"/>
                             </mat-form-field>
                         </div>
