--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -140,8 +140,10 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group kt-form__group row">
-                                <div class="col-lg-12">
+                        </div>
+                        </div>    
+                            <div class="form-group kt-form__group row mt-3 pr-0">
+                                <div class="col-lg-12  pr-0">
                                     <div class="table-responsive">
                                         <table class="table table-striped" *ngIf="loanPersonalSuretiesArray.length !=0">
                                             <thead>
@@ -175,8 +177,12 @@
                                                 <td>{{loan.NetValue}}</td>
 
 
-                                                <td><span
-                                                    (click)="onEditPersonalSureties(loan)" class="text-blue-500">Edit</span>
+                                                <td>
+                                                    <button  type="button" class="flex  font-bold"
+                                                        color="primary" (click)="onEditPersonalSureties(loan)">
+                                                        <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
+                                                        Edit
+                                                    </button>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -185,9 +191,7 @@
 
                                 </div>
                             </div>
-                        </div>
 
-                    </div>
                 </div>
             </div>
         </form>
@@ -195,7 +199,7 @@
 </div>
 <!-- Personal Sureties End -->
 <!-- Corporate sureties Begin -->
-<div class="kt-portlet">
+<div class="kt-portlet mt-3">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
             <h5 class="sub-heading">Corporate sureties</h5>
@@ -206,7 +210,7 @@
             <div class="kt-form">
                 <div class="form-group kt-form__group row">
                     <div class="col-lg-12 ">
-                        <div class="table-responsive">
+                        <div class="table-responsive overflow-x-hidden">
                             <table class="table table-striped">
                                 <thead>
                                 <tr class="table-header-background">
@@ -268,8 +272,8 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group kt-form__group row">
-                                <div class="col-lg-12">
+                            <div class="form-group kt-form__group row pr-0">
+                                <div class="col-lg-12 pr-0">
                                     <div class="table-responsive">
                                         <table class="table table-striped" *ngIf="loanCorporateSuretyArray.length!=0">
                                             <thead>
@@ -288,8 +292,12 @@
                                                 <td>{{loan.RefrenceNo}}</td>
 
 
-                                                <td><span
-                                                    (click)="onEditLoanCorporateSuretyArray(loan)">Edit</span>
+                                                <td>
+                                                    <button  type="button" class="flex  font-bold"
+                                                    color="primary" (click)="onEditLoanCorporateSuretyArray(loan)">
+                                                    <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
+                                                    Edit
+                                                </button>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -307,7 +315,7 @@
 </div>
 <!-- Corporate sureties End -->
 <!-- References Begin -->
-<div class="kt-portlet">
+<div class="kt-portlet mt-3">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
             <h5 class="sub-heading">References</h5>
@@ -404,8 +412,10 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group kt-form__group row">
-                                <div class="col-lg-12">
+                            </div>
+                            </div>
+                            <div class="form-group kt-form__group row mt-3 pr-0">
+                                <div class="col-lg-12 pr-0">
                                     <div class="table-responsive">
                                         <table class="table table-striped" *ngIf="loanRefrenceArray.length!=0">
                                             <thead>
@@ -434,7 +444,15 @@
                                                 <td>{{loan.Ntn}}</td>
 
 
-                                                <td><span (click)="onEditRefrence(loan)">Edit</span></td>
+                                                <td>
+                                                    <button  type="button" class="flex  font-bold"
+                                                        color="primary" (click)="onEditRefrence(loan)">
+                                                        <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
+                                                        Edit
+                                                     </button>
+                                                    
+                                                
+                                                   </td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -442,8 +460,7 @@
 
                                 </div>
                             </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </form>
@@ -451,7 +468,7 @@
 </div>
 <!-- References End -->
 <!-- Witnesses Begin -->
-<div class="kt-portlet">
+<div class="kt-portlet mt-3">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
             <h5 class="sub-heading">Witnesses</h5>
@@ -517,8 +534,10 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group kt-form__group row">
-                                <div class="col-lg-12">
+                            </div>
+                            </div>
+                            <div class="form-group kt-form__group row pr-0">
+                                <div class="col-lg-12 pr-0">
                                     <div class="table-responsive">
                                         <table class="table table-striped" *ngIf="loanWitnessArray.length!=0">
                                             <thead>
@@ -537,7 +556,13 @@
                                                 <td>{{loan.WitnessAddress}}</td>
 
 
-                                                <td><span (click)="onEditLoanWitnessArray(loan)">Edit</span>
+                                                <td>
+                                                    
+                                                    <button  type="button" class="flex  font-bold"
+                                                    color="primary" (click)="onEditLoanWitnessArray(loan)">
+                                                    <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
+                                                    Edit
+                                                 </button>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -546,8 +571,7 @@
 
                                 </div>
                             </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </form>
@@ -555,7 +579,7 @@
 </div>
 <!-- Witnesses End -->
 <!-- Past Paid Loans Begin -->
-<div class="kt-portlet">
+<div class="kt-portlet mt-3">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
             <h5 class="sub-heading">Past Paid Loans</h5>
@@ -636,8 +660,11 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group kt-form__group row">
-                                <div class="col-lg-12">
+                            </div>
+                            </div>
+
+                            <div class="form-group kt-form__group row mt-3 pr-0">
+                                <div class="col-lg-12 pr-0">
                                     <div class="table-responsive">
                                         <table class="table table-striped" *ngIf="loanPastPaidArray.length!=0">
                                             <thead>
@@ -657,7 +684,13 @@
                                                 <td>{{loan.LastPaidDate}}</td>
 
 
-                                                <td><span (click)="onEditLoanPastPaidArray(loan)">Edit</span>
+                                                <td>
+                                                    
+                                                    <button  type="button" class="flex  font-bold"
+                                                    color="primary"  (click)="onEditLoanPastPaidArray(loan)">
+                                                    <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
+                                                    Edit
+                                                 </button>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -666,8 +699,7 @@
 
                                 </div>
                             </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </form>
@@ -675,7 +707,7 @@
 </div>
 <!-- Past Paid Loans End -->
 <!-- Current Loans Begin -->
-<div class="kt-portlet">
+<div class="kt-portlet mt-3">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
             <h5 class="sub-heading">Current Loans</h5>
@@ -809,8 +841,11 @@
                                 </tr>
                                 </tbody>
                             </table>
-                            <div class="form-group kt-form__group row">
-                                <div class="col-lg-12">
+                            </div>
+                            </div>
+
+                            <div class="form-group kt-form__group row mt-3 pr-0">
+                                <div class="col-lg-12 pr-0">
                                     <div class="table-responsive">
                                         <table class="table table-striped" *ngIf="loanCurrentList.length !=0">
                                             <thead>
@@ -840,8 +875,16 @@
                                                 <td>{{loan.FundNonfundFlagName}}</td>
 
 
-                                                <td><span
-                                                    (click)="onEditLoanCurrentList(loan)">Edit</span></td>
+                                                <td>
+                                                    <button  type="button" class="flex  font-bold"
+                                                    color="primary"  (click)="onEditLoanCurrentList(loan)">
+                                                    <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
+                                                    Edit
+                                                 </button>
+
+                                                
+                                                
+                                                </td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -849,8 +892,7 @@
 
                                 </div>
                             </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </form>
@@ -858,7 +900,7 @@
 </div>
 <!-- Current Loans End -->
 <!-- Documents Attached Begin -->
-<div class="kt-portlet">
+<div class="kt-portlet mt-3">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
         <div class="kt-portlet__head-label">
             <h5 class="sub-heading">Documents Attached</h5>
@@ -876,7 +918,7 @@
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
                         <div *ngFor="let doc of loanDocumentsCheckList; let i = index;"
                              style="display:inline; margin-right:1%">
-                            <mat-checkbox [value]="doc.DocumentID" (change)="setUnsetDocumentCheckBox($event)"
+                            <mat-checkbox class="text-md py-2" [value]="doc.DocumentID" (change)="setUnsetDocumentCheckBox($event)"
                                           [checked]="CheckAttached(doc.isAttached)">
                                 {{doc.DocName}}
                             </mat-checkbox>
@@ -885,7 +927,7 @@
                     </div>
                 </div>
 
-                <div class="form-group kt-form__group row">
+                <div class="form-group kt-form__group row mt-2">
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
                         <button style="background-color: #01671B;"
                                 class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
