reports routes added

--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card routerLink="updated-list"
+            <mat-card routerLink="updated-list-of-defaulter"
                       class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText">
                 <div class="d-grid" style="justify-items: center;">
