--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -140,7 +140,7 @@
                                     <td>{{legal.Cnic}}</td>
                                     <td>{{legal.PhoneCell}}</td>
                                     <td>{{legal.Dob}}</td>
-                                    <td>{{legal.Relation}}</td>
+                                    <td>{{legal.RelationName}}</td>
                                     <td>
                                         <button type="button" class="btn btn-xs btn-primary"
                                                 (click)="onDeleteLegalHeirs(legal.UserID,i)">Delete
